--- a/templates/header.html.twig
+++ b/templates/header.html.twig
@@ -7,7 +7,7 @@
         <!-- Left elements -->
         <div class="col-lg-2 col-sm-4 col-4">
           <a href="{{ path('app_home') }}" target="_blank" class="float-start">
-            <img src="https://mdbootstrap.com/img/logo/mdb-transaprent-noshadows.png" height="35" />
+            <img src="{{ asset('images/logo/mdb-transaprent-noshadowsae03.png') }}" height="35" />
           </a>
         </div>
         <!-- Left elements -->
