--- a/templates/home/produits.html.twig
+++ b/templates/home/produits.html.twig
@@ -9,19 +9,43 @@
 
     <div class="row">
       {% for article in articles %}
-        
+        {# {{ dump(article.visuels)}} #}
     
       <div class="col-lg-3 col-md-6 col-sm-6 d-flex">
         <div class="card w-100 my-2 shadow-2-strong">
-          <img src="{{ asset('images/cookies/2023-05-21-94a25c1339a4db3dd5e3f04d159e8fb537a175f1.jpg') }}" class="card-img-top" style="aspect-ratio: 1 / 1" />
+          <a href="{{  path('app_article_show', {'id': article.id}) }}">
+          {% if article.visuels is empty %}
+            <img src="{{ asset('images/cookies/imageDefault.jpg') }}" 
+          {% else %}
+            <img src="{{ asset('images/cookies/'~ article.visuels[0]) }}" 
+          {% endif %}
+          class="card-img-top" style="aspect-ratio: 1 / 1" />
+          </a>
+
+          
+          <form action="{{ path('app_addPanier')}}" method="POST">
           <div class="card-body d-flex flex-column">
-            <h5 class="card-title">{{article.nomarticle}}</h5>
-            <p class="card-text">{{article.prixArticle}}</p>
+            <h5 class="card-title"><a href="{{  path('app_article_show', {'id': article.id}) }}">{{article.nomarticle}}</a></h5>
+            <p class="card-text">{{article.prixArticle}} € / boite</p>
+            <input type="hidden" value="{{article.id}}" id="articleId" name="articleId">
+            <div class="input-group mb-3" style="width: 130px;">
+              <button class="btn btn-white border border-secondary px-3" type="button" id="button-addon1" data-mdb-ripple-color="dark" onclick="modifQtity('moins', 1, {{article.id}});">
+                <i class="fas fa-minus"></i>
+              </button>
+              <input type="text" class="form-control text-center border border-secondary" placeholder="1" aria-label="Example text with button addon" aria-describedby="button-addon1" value="1" id="articleQtity{{article.id}}" name="articleQtity{{article.id}}" />
+              <button class="btn btn-white border border-secondary px-3" type="button" id="button-addon2" data-mdb-ripple-color="dark" onclick="modifQtity('plus', 1, {{article.id}});">
+                <i class="fas fa-plus"></i>
+              </button>
+            </div>
+
+
             <div class="card-footer d-flex align-items-end pt-3 px-0 pb-0 mt-auto">
-              <a href="#!" class="btn btn-primary shadow-0 me-1">Add to cart</a>
-              <a href="#!" class="btn btn-light border px-2 pt-2 icon-hover"><i class="fas fa-heart fa-lg text-secondary px-1"></i></a>
+              <button type="submit" class="btn btn-primary shadow-0 me-1">Add to cart</button>
+              {# <a href="{{ path('app_addPanier', {id :article.id , qtity:1 }) }}" class="btn btn-primary shadow-0 me-1">Add to cart</a> #}
+              {# <a href="#!" class="btn btn-light border px-2 pt-2 icon-hover"><i class="fas fa-heart fa-lg text-secondary px-1"></i></a> #}
             </div>
           </div>
+          </form>
         </div>
       </div>
       {% endfor %}
