--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -50,10 +50,10 @@
 
          {% block javascripts %}
             {{ encore_entry_script_tags('app') }}
-            {{ encore_entry_script_tags('jquery') }}
+            {# {{ encore_entry_script_tags('jquery') }}
               <script>
                   $("body").css("background", "deepskyblue");
-              </script>
+              </script> #}
         {% endblock %}
         <!-- MDB -->
         <script
