--- a/templates/article/show.html.twig
+++ b/templates/article/show.html.twig
@@ -49,7 +49,13 @@
 
 
         <div class="border rounded-4 mb-3 d-flex justify-content-center">
-            <img style="max-width: 100%; max-height: 100vh; margin: auto;" class="rounded-4 fit" src="{{ asset('images/cookies/'~ article.visuels[0]) }}" />
+
+            {% if article.visuels is empty %}
+              <img src="{{ asset('images/cookies/imageDefault.jpg') }}" 
+            {% else %}
+              <img src="{{ asset('images/cookies/'~ article.visuels[0]) }}" 
+            {% endif %}
+            style="max-width: 100%; max-height: 100vh; margin: auto;" class="rounded-4 fit"  />
         </div>
         {# <div class="d-flex justify-content-center mb-3">
           <a data-fslightbox="mygalley" class="border mx-1 rounded-2" target="_blank" data-type="image" href="https://bootstrap-ecommerce.com/bootstrap5-ecommerce/images/items/detail1/big1.webp" class="item-thumb">
