--- a/templates/home/produits.html.twig
+++ b/templates/home/produits.html.twig
@@ -1,11 +1,15 @@
 
-{# {{dump(articles)}} #}
+{{dump(session)}}
 
 <section>
   <div class="container my-5">
     <header class="mb-4">
       <h3>Nos produits</h3>
     </header>
+
+
+
+
 
     <div class="row">
       {% for article in articles %}
@@ -23,29 +27,55 @@
           </a>
 
           
-          <form action="{{ path('app_addPanier')}}" method="POST">
+          
           <div class="card-body d-flex flex-column">
             <h5 class="card-title"><a href="{{  path('app_article_show', {'id': article.id}) }}">{{article.nomarticle}}</a></h5>
             <p class="card-text">{{article.prixArticle}} € / boite</p>
             <input type="hidden" value="{{article.id}}" id="articleId" name="articleId">
             <div class="input-group mb-3" style="width: 130px;">
-              <button class="btn btn-white border border-secondary px-3" type="button" id="button-addon1" data-mdb-ripple-color="dark" onclick="modifQtity('moins', 1, {{article.id}});">
+              
+              <button 
+                class="btn btn-white border border-secondary px-3" 
+                type="button" id="button-addon1" 
+                data-mdb-ripple-color="dark" 
+                onclick="modifQtity('moins', 1, {{article.id}});"
+                >
                 <i class="fas fa-minus"></i>
               </button>
-              <input type="text" class="form-control text-center border border-secondary" placeholder="1" aria-label="Example text with button addon" aria-describedby="button-addon1" value="1" id="articleQtity{{article.id}}" name="articleQtity{{article.id}}" />
-              <button class="btn btn-white border border-secondary px-3" type="button" id="button-addon2" data-mdb-ripple-color="dark" onclick="modifQtity('plus', 1, {{article.id}});">
+
+              <input 
+                type="text" 
+                class="form-control text-center border border-secondary" 
+                placeholder="1" 
+                aria-label="Example text with button addon" 
+                aria-describedby="button-addon1" 
+                value="1" 
+                id="articleQtity{{article.id}}" 
+                name="articleQtity{{article.id}}" 
+              />
+
+              <button 
+                class="btn btn-white border border-secondary px-3" 
+                type="button" 
+                id="button-addon2" 
+                data-mdb-ripple-color="dark" 
+                onclick="modifQtity('plus', 1, {{article.id}});"
+              >
                 <i class="fas fa-plus"></i>
               </button>
             </div>
 
-
+            
             <div class="card-footer d-flex align-items-end pt-3 px-0 pb-0 mt-auto">
-              <button type="submit" class="btn btn-primary shadow-0 me-1">Add to cart</button>
+              <div id="ajaxPanierMaj{{article.id}}"></div>
+              {# <button type="submit" class="btn btn-primary shadow-0 me-1">Add to cart</button> #}
+              <button onclick="modifPanier( {{article.id}} )" class="btn btn-primary shadow-0 me-1">Ajouter au panier</button>
               {# <a href="{{ path('app_addPanier', {id :article.id , qtity:1 }) }}" class="btn btn-primary shadow-0 me-1">Add to cart</a> #}
-              {# <a href="#!" class="btn btn-light border px-2 pt-2 icon-hover"><i class="fas fa-heart fa-lg text-secondary px-1"></i></a> #}
+             
             </div>
+            
           </div>
-          </form>
+         
         </div>
       </div>
       {% endfor %}
