user auth & user registration

--- a/templates/header.html.twig
+++ b/templates/header.html.twig
@@ -6,7 +6,7 @@
       <div class="row gy-3">
         <!-- Left elements -->
         <div class="col-lg-2 col-sm-4 col-4">
-          <a href="{{ path('app_home') }}" target="_blank" class="float-start">
+          <a href="{{ path('app_home') }}" class="float-start">
             <img src="{{ asset('images/logo/mdb-transaprent-noshadowsae03.png') }}" height="35" />
           </a>
         </div>
@@ -15,8 +15,10 @@
         <!-- Center elements -->
         <div class="order-lg-last col-lg-5 col-sm-8 col-8">
           <div class="d-flex float-end">
-            <a href="https://github.com/mdbootstrap/bootstrap-material-design" class="me-1 border rounded py-1 px-3 nav-link d-flex align-items-center" target="_blank"> <i class="fas fa-user-alt m-1 me-md-2"></i><p class="d-none d-md-block mb-0">Mon compte</p> </a>
+            <a href="{{ path('app_monCompte') }}" class="me-1 border rounded py-1 px-3 nav-link d-flex align-items-center" target="_blank"> <i class="fas fa-user-alt m-1 me-md-2"></i><p class="d-none d-md-block mb-0">Mon compte</p> </a>
+
             {# <a href="https://github.com/mdbootstrap/bootstrap-material-design" class="me-1 border rounded py-1 px-3 nav-link d-flex align-items-center" target="_blank"> <i class="fas fa-heart m-1 me-md-2"></i><p class="d-none d-md-block mb-0">Wishlist</p> </a> #}
+
             <a href="{{ path('app_panier') }}" class="border rounded py-1 px-3 nav-link d-flex align-items-center" target="_blank"> <i class="fas fa-shopping-cart m-1 me-md-2"></i><p class="d-none d-md-block mb-0">Mon panier</p> </a>
           </div>
         </div>
