--- a/templates/header.html.twig
+++ b/templates/header.html.twig
@@ -15,11 +15,30 @@
         <!-- Center elements -->
         <div class="order-lg-last col-lg-5 col-sm-8 col-8">
           <div class="d-flex float-end">
-            <a href="{{ path('app_monCompte') }}" class="me-1 border rounded py-1 px-3 nav-link d-flex align-items-center" target="_blank"> <i class="fas fa-user-alt m-1 me-md-2"></i><p class="d-none d-md-block mb-0">Mon compte</p> </a>
+            {% if app.user %} 
+
+              <a href="{{ path('app_logout') }}" class="me-1 border rounded py-1 px-3 nav-link d-flex align-items-center" title="Déconnexion"> 
+                <i class="fa-solid fa-power-off m-1 me-md-2"></i>           
+              </a>
+
+              <a href="{{ path('app_monCompte') }}" class="me-1 border rounded py-1 px-3 nav-link d-flex align-items-center" title="Mon compte"> 
+                <i class="fas fa-user-alt m-1 me-md-2"></i>
+                <p class="d-none d-md-block mb-0">Mon compte</p> 
+              </a>
+            {% else %} 
+              <a href="{{ path('app_login') }}" class="me-1 border rounded py-1 px-3 nav-link d-flex align-items-center" title="Connexion"> 
+                <i class="fa-solid fa-right-to-bracket m-1 me-md-2"></i>
+                <p class="d-none d-md-block mb-0">Me connecter</p> 
+              </a>
+              <a href="{{ path('app_register') }}" class="me-1 border rounded py-1 px-3 nav-link d-flex align-items-center" title="Inscription"> 
+                <i class="fa-regular fa-address-card m-1 me-md-2"></i>
+                <p class="d-none d-md-block mb-0">M'inscrire</p> 
+              </a>
+            {% endif  %} 
 
             {# <a href="https://github.com/mdbootstrap/bootstrap-material-design" class="me-1 border rounded py-1 px-3 nav-link d-flex align-items-center" target="_blank"> <i class="fas fa-heart m-1 me-md-2"></i><p class="d-none d-md-block mb-0">Wishlist</p> </a> #}
 
-            <a href="{{ path('app_panier') }}" class="border rounded py-1 px-3 nav-link d-flex align-items-center" target="_blank"> <i class="fas fa-shopping-cart m-1 me-md-2"></i><p class="d-none d-md-block mb-0">Mon panier</p> </a>
+            <a href="{{ path('app_panier') }}" class="border rounded py-1 px-3 nav-link d-flex align-items-center"> <i class="fas fa-shopping-cart m-1 me-md-2"></i><p class="d-none d-md-block mb-0">Mon panier</p> </a>
           </div>
         </div>
         <!-- Center elements -->
