modif adresse entity+ form adresse ok

--- a/templates/panier/index.html.twig
+++ b/templates/panier/index.html.twig
@@ -6,7 +6,7 @@
 
 {# {# {{dump()}} #}
 
-{{dump(dataPanier)}}
+{# {{dump(dataPanier)}} #}
 
 <!-- cart + summary -->
 <section class="bg-light my-5">
