--- a/templates/panier/panierBlocLivraison.html.twig
+++ b/templates/panier/panierBlocLivraison.html.twig
@@ -1,5 +1,7 @@
 
+{{dump(adressesLivraison)}}
 
+{{dump(adressesFacturation)}}
 
 <div class="border-top pt-4 mx-4 mb-4">
   <p><i class="fas fa-truck text-muted fa-lg"></i> Free Delivery within 1-2 weeks</p>
