--- a/templates/panier/panierBlocTotal.html.twig
+++ b/templates/panier/panierBlocTotal.html.twig
@@ -20,7 +20,7 @@
     </div>
 
     <div class="mt-3">
-      <a href="#" class="btn btn-success w-100 shadow-0 mb-2"> Je valide ma commande </a>
+      <a href="{{path("app_paiement_index")}}" class="btn btn-success w-100 shadow-0 mb-2"> Je valide ma commande </a>
       <a href="{{path("app_home")}}" class="btn btn-light w-100 border mt-2"> Je continue mon shopping </a>
     </div>
   </div>
