--- a/templates/panier/panierBlocTotal.html.twig
+++ b/templates/panier/panierBlocTotal.html.twig
@@ -18,9 +18,14 @@
       <p class="mb-2">Total :</p>
       <p class="mb-2 fw-bold">{{totalPanier}} €</p>
     </div>
+    <input type="hidden" name="totalPanier" value="{{totalPanier}}" />
+
+    <div id="errorAdresses" style="display:none;"></div>
+
 
     <div class="mt-3">
-      <a href="{{path("app_paiement_index")}}" class="btn btn-success w-100 shadow-0 mb-2"> Je valide ma commande </a>
+      {# <a href="{{path("app_paiement_index")}}" class="btn btn-success w-100 shadow-0 mb-2"> Je valide ma commande </a> #}
+      <a id="aeValidate" onclick="verifAdresses();" class="btn btn-success w-100 shadow-0 mb-2"> Je valide ma commande </a>
       <a href="{{path("app_home")}}" class="btn btn-light w-100 border mt-2"> Je continue mon shopping </a>
     </div>
   </div>
