--- a/templates/paiement/probleme.html.twig
+++ b/templates/paiement/probleme.html.twig
@@ -4,12 +4,6 @@
 
 {% block body %}
 
-{{dump(panierSess)}}
-
-{{dump(addLivrSess)}}
-
-{{dump(addFactSess)}}
-
-{{dump(totalConf)}}
+probleme
 
 {% endblock %}
