--- a/templates/paiement/index.html.twig
+++ b/templates/paiement/index.html.twig
@@ -84,14 +84,14 @@
                     'Content-Type': 'application/x-www-form-urlencoded'
                })
                }).then(function (response) {
-                    console.log("truc")
-                    /*
+                    console.log("truc"+response.status)
+                    
                if (response.status == 200) {
                     window.location.href = "{{ path('app_paiement_merci') }}";
                } else {
                     //alert('Une erreur est survenue');
                     window.location.href = "{{ path('app_paiement_probleme') }}";
-               }*/
+               }
                }).catch(function(erreur){
                     console.log(erreur)
                });
