--- a/templates/adresse/index.html.twig
+++ b/templates/adresse/index.html.twig
@@ -15,18 +15,27 @@
         <table class="table">
             <thead>
                 <tr>
-                    <th>Id</th>
+                    {# <th>Id</th> #}
                     <th>TypeAdresse</th>
-                    <th>RueAdresse</th>
+                    <th>Nom</th>
+                    <th>Adresse</th>
                     <th>actions</th>
                 </tr>
             </thead>
             <tbody>
             {% for adresse in adresses %}
                 <tr>
-                    <td>{{ adresse.id }}</td>
+                    {# <td>{{ adresse.id }}</td> #}
                     <td>{{ adresse.typeAdresse }}</td>
-                    <td>{{ adresse.rueAdresse }}</td>
+                    <td>
+                        {{ adresse.nomAdresse }}<br />
+                        {{ adresse.prenomAdresse }}
+                    </td>
+                    <td>
+                        {{ adresse.rueAdresse }}<br />
+                        {{ adresse.cpAdresse }}<br />
+                         {{ adresse.villeAdresse }}
+                    </td>
                     <td>
                         <a href="{{ path('app_adresse_show', {'id': adresse.id}) }}">show</a>
                         <a href="{{ path('app_adresse_edit', {'id': adresse.id}) }}">edit</a>
