--- a/templates/home/produits.html.twig
+++ b/templates/home/produits.html.twig
@@ -51,7 +51,8 @@
                 aria-describedby="button-addon1" 
                 value="1" 
                 id="articleQtity{{article.id}}" 
-                name="articleQtity{{article.id}}" 
+                name="articleQtity{{article.id}}"
+                readonly 
               />
 
               <button 
