--- a/templates/panier/panierLigneArticle.html.twig
+++ b/templates/panier/panierLigneArticle.html.twig
@@ -59,6 +59,7 @@
             value="{{data.quantite}}" 
             id="articleQtity{{data.article.id}}" 
             name="articleQtity" 
+            readonly 
           />
 
           <button 
