--- a/templates/adresse/new.html.twig
+++ b/templates/adresse/new.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}New Adresse{% endblock %}
+{% block title %}Ajouter une adresse{% endblock %}
 
 {% block body %}
 
@@ -9,7 +9,7 @@
   <div class="container">
     <div class="row">
 
-        <h1>Create new Adresse</h1>
+        <h1>Ajouter une adresse</h1>
 
         {{ include('adresse/_form.html.twig') }}
 
